# vector-loom

./: .gitignore  LICENSE  README.md  pyproject.toml  run_editor.py  run_viewer.py  zoo-project.json
.context-jetpack/: data.json
db/: coordinates.json
docs/raw/: 0001__vectorloom-format_v1.json  0002__coordinates.json
examples/: folder_node.vloom.json  primitives.vloom.json
src/vectorloom/: __init__.py  editor.py  export_png.py  geometry.py  model.py  render.py  symbols.py  viewer.py
src/vectorloom/editor/: __init__.py  app.py  continuity.py  discrete.py  events.py  handles.py  history.py  projection.py  world.py
tests/: test_editor.py  test_runtime.py
