[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorloom"
version = "0.1.0"
description = "A data format, runtime, and editor for 2-D nestable vector structures."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC0-1.0"}
authors = [{name = "Lion Kimbro"}]
dependencies = []

[project.scripts]
vectorloom-viewer = "vectorloom.viewer:main"
vectorloom-editor = "vectorloom.editor:main"

[tool.setuptools.packages.find]
where = ["src"]
